--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@prisma/client": "^5.10.2",
     "express": "^4.18.3",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.0",
     "yargs": "^17.7.2"
   },
